# Marian_glowa

./: README.md  arduino_marian.txt  funkcjemar.txt  marian_zakresy.txt
PythonProject/: abc.py  funkcje.py  main.py
Serial_Test/: test.py
arduino/: arduino.ino
arduino_test/: arduino_test.ino
arduino_test2/: arduino_test2.ino
kamera/: CMakeLists.txt
kamera/inc/: funkcje.h
kamera/src/: funkcje.cpp  main.cpp
konfiguracja/: konfiguracja.ino
mapa_mysli/: Otwórz notes.onetoc2
test_kamera/: funkcje.py  main.py
